--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
                   alt="Imagem do jogo Warcraft"
               /></a>
             </li>
+
+            <li>
+              <a
+                href="https://www.twitch.tv/directory/game/Minecraft"
+                target="_blank"
+                ><img
+                  src="https://static-cdn.jtvnw.net/ttv-boxart/27471_IGDB-188x250.jpg"
+                  alt="Imagem do jogo Minecraft"
+              /></a>
+            </li>
           </ul>
         </div>
       </section>
